Css changes to fix bug that would cause the navbar to sometimes be pushed out of view due to map moving up in view-port... very strange bug

--- a/vue/src/style.css
+++ b/vue/src/style.css
@@ -2,10 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body, main{
+/* html, body, main{
     overflow: hidden;
-}
+} */
 
-.mapboxgl-popup-content{
-    border: red !important;
+body, html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
